// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Progress Altezza 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <div
        className="progress"
        style={
          Object {
            "height": 1,
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="25"
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
        style={
          Object {
            "height": 10,
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="25"
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
        style={
          Object {
            "height": 20,
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="25"
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Altezza.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Progress Background 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="25"
          className="progress-bar bg-success"
          role="progressbar"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow={50}
          className="progress-bar bg-info"
          role="progressbar"
          style={
            Object {
              "width": "50%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow={75}
          className="progress-bar bg-warning"
          role="progressbar"
          style={
            Object {
              "width": "75%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="100"
          className="progress-bar bg-danger"
          role="progressbar"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Background.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Progress Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <div
        className="progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow={0}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "0%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="25"
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "25%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow={50}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "50%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow={75}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "75%",
            }
          }
        />
      </div>
      <div
        className="mt-3 progress"
      >
        <div
          aria-valuemax={100}
          aria-valuemin="0"
          aria-valuenow="100"
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Progress Esempi interattivi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="m-3 progress"
      style={
        Object {
          "height": 18,
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin="0"
        aria-valuenow={25}
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "EsempiInterattivi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Progress Etichette 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={100}
        aria-valuemin="0"
        aria-valuenow="25"
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        25%
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Etichette.md",
      }
    }
  />
</div>
`;
